# Delta

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  recognition_accuracy.cpp
cmake/: FindMLPACK.cmake
config/: copy.yaml  delta00.yaml  example.yaml  target.yaml
docs/: BOM.xlsx  dimensions.txt
include/: _app_state_eng.hpp  _app_state_init.hpp  _app_state_plan.hpp  _app_state_recognition.hpp  _app_state_shutdown.hpp  _app_state_wait.hpp  app.hpp  bsplines.hpp  button.hpp  camera.hpp  controller.hpp  engine.hpp  hardware.hpp  imu.hpp  model.hpp  motor.hpp  path_plan.hpp  recognition.hpp  state_estimator.hpp  utils.hpp
include/_app/: _app_state_eng.hpp  _app_state_init.hpp  _app_state_plan.hpp  _app_state_wait.hpp  app.hpp  app_interface.hpp
include/_camera/: _adafruit_ptc08.hpp  _mock_cam.hpp  camera.hpp
include/_control/: _linear.hpp  _optimal.hpp  controller.hpp  controller_builder.hpp
include/_engine/: _uci_adapter.hpp  engine_builder.hpp  engine_interface.hpp
include/_grpc/: grpc_server.hpp
include/_hw/: _hw_jetson.hpp  _hw_mock.hpp
include/_imu/: _hillcrest_fsm300.hpp  imu.hpp
include/_model/: _simple_delta_model.hpp  model.hpp
include/_motor/: _uservo_sg90.hpp  motor.hpp
include/_plan/: _simple_plan_alg.hpp  plan_builder.hpp  plan_interface.hpp
include/_pose/: _simple_pose_strategy.hpp  pose.hpp
include/_recog/: _simple_recognition_strategy.hpp  recognition.hpp
include/_se/: _extended_kalman.hpp  _unscented_kalman.hpp  state_estimator.hpp  state_estimator_builder.hpp
res/gcode/: jetson_lid.gcode  pvc_attachment.gcode
res/mat_data/: Dbot.txt  Dmid.txt  Dtop.txt  H_upper.txt  Hdot.txt  b.txt  h_lower.txt
res/plots/: damp_phaseplot_1.html  damp_phi1_1.html  damp_phi2_1.html  damp_phi3_1.html  no_damp_phaseplot_1.html  no_damp_phi1_1.html  no_damp_phi2_1.html  no_damp_phi3_1.html
res/stl/: ServoMG996R.stl  jetson_lid.stl  pvc_attachment.stl
src/: _app_state_eng.cpp  _app_state_init.cpp  _app_state_plan.cpp  _app_state_recognition.cpp  _app_state_shutdown.cpp  _app_state_wait.cpp  app.cpp  controller.cpp  engine.cpp  hardware.cpp  main.cpp  model.cpp  path_plan.cpp  recognition.cpp  state_estimator.cpp
src/_app/: _app_state_eng.cpp  _app_state_init.cpp  _app_state_plan.cpp  _app_state_recognition.cpp  _app_state_shutdown.cpp  _app_state_wait.cpp  app.cpp
src/_control/: _linear.cpp  _optimal.cpp  controller_builder.cpp
src/_engine/: _uci_adapter.cpp  engine_builder.cpp
src/_grpc/: grpc_server.cpp
src/_hw/: _hw_jetson.cpp  _hw_mock.cpp
src/_model/: _simple_delta_model.cpp
src/_plan/: _simple_plan_alg.cpp  plan_builder.cpp
src/_pose/: _simple_pose_strategy.cpp
src/_recog/: _simple_recognition_strategy.cpp
src/_se/: _extended_kalman.cpp  _unscented_kalman.cpp  state_estimator_builder.cpp
test/: CMakeLists.txt  mlpack_test.cpp
test/unit_test/_recog/: simple_recognition_strategy_test.cpp
tools/: README.md
tools/cad/: base.scad  jetson_lid.scad  jetson_xavier_nx.scad  main_assembly.scad  pvc_attachment.scad  servo.scad  servo_mount.scad
tools/cv/: dataloader.jl  fluxtest.jl
tools/jl/: delta_arm.jl  delta_robot.jl  delta_robot_base.jl
tools/jl/DeltaRobot/: Manifest.toml  Project.toml
tools/jl/DeltaRobot/src/: DeltaRobot.jl  animation.jl  block_diagram.jl  control.jl  delta_robot_params.jl  kinematics.jl  simulation.jl  stats.jl
tools/jl/DeltaRobot/test/: runtests.jl
tools/symbolic/: delta_arm.m  delta_robot.m  delta_robot_base.m  delta_robot_base_h.m  inverse_kinematics.m
